DFR-465: fortify integration